--- a/pages/home.html
+++ b/pages/home.html
@@ -5,22 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Merriweather&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/home.css">
     <title>home</title>
 </head>
 <body>
     <nav class="navbar sticky-top navbar-expand-lg navbar-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#home">Dish-E</a>
+          <a class="navbar-brand mx-3" href="#home">Dish-E</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link " href="">Home</a>
-              <a class="nav-link" href="">help</a>
-              <a class="nav-link" href="">account</a>
-              <a class="nav-link" href="">log-out</a>
+              <a class="nav-link mx-5"  href="">Home</a>
+              <a class="nav-link mx-5" href="">help</a>
+              <a class="nav-link mx-5" href="">account</a>
+              <a class="nav-link mx-5" href="">log-out</a>
             </div>
           </div>
         </div>
