This commit will add responsive classes

--- a/pages/login.html
+++ b/pages/login.html
@@ -11,9 +11,9 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container layout">
         <h1>Dish-E</h1>
-        <div class="container-fluid">
+        <div class="container">
             <form id="details">
                 <div class="mb-3">
                   <label for="exampleInputEmail1" class="form-label">Email address</label>
