--- a/pages/home.html
+++ b/pages/home.html
@@ -5,27 +5,46 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/7c6aee25da.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Merriweather&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/home.css">
     <title>home</title>
 </head>
 <body>
-    <nav class="navbar sticky-top navbar-expand-lg navbar-light">
-        <div class="container-fluid">
-          <a class="navbar-brand mx-3" href="#home">Dish-E</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-              <a class="nav-link mx-5"  href="">Home</a>
-              <a class="nav-link mx-5" href="">help</a>
-              <a class="nav-link mx-5" href="">account</a>
-              <a class="nav-link mx-5" href="">log-out</a>
-            </div>
-          </div>
+  <nav class="navbar sticky-top navbar-expand-lg navbar-light">
+    <div class="container-fluid">
+      <a class="navbar-brand mx-3" href="#home">Dish-E</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-link mx-5"  href="">Home</a>
+          <a class="nav-link mx-5" href="">help</a>
+          <a class="nav-link mx-5" href="">account</a>
+          <a class="nav-link mx-5" href="">log-out</a>
         </div>
-      </nav>
+      </div>
+    </div>
+  </nav>
+
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <div class="intro">
+          <p>Find the perfect dish for your ingredient</p>
+          <p>The perfect meal is just a click a way</p>
+        </div>
+        <div class="input-group w-50">
+          <input type="text" class="form-control" placeholder="Enter ingredient name" >
+          <button class="btn" type="button" id="button-addon2">
+            <i class="fa-solid fa-magnifying-glass"></i>
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
