--- a/pages/help.html
+++ b/pages/help.html
@@ -4,8 +4,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Merriweather">
+  
+   
   <link rel="stylesheet" href="../css/help.css">
   <title>Dish-E Help</title>
 </head>
@@ -24,12 +29,10 @@
     </div>
   </section>
 
-
-
-  <div class="d-flex flex-column">
+  <div class=" d-flex flex-column box"  >
     <section class="faq container margin-auto mt-4">
       <div class="">
-        <h3 class="text-center mt-4">Frequently Asked Questions</h3>
+        <h3 class="text-center mt-4 fw-bold">Frequently Asked Questions</h3>
         <div>
           <div>           
             <p><span>What does Dish-E mean?</span><br>Dish-e is an applicatiion designed to help users decide what to cook based on what they have in their
@@ -59,12 +62,12 @@
       </div>
     </section>
 
-    <section class="contact d-flex justify-content-around border">
-      <div class="contact">
+    <section class="contact d-flex justify-content-between ">
+      <div>
         <p>contact us:</p>
         <p>+254123456789<br>dishie@gmail.com<br>streetview,Nairobi.</p>
-
       </div>
+
       <div class="newsletter">
         <p>Subscribe to our newsletter</p>
         <div>
@@ -75,7 +78,10 @@
           <label for=""></label>
           <input type="email" placeholder="Enter your email">
         </div>
-        <button class="btn btn-secondary">Subscribe</button>
+        <div class=" button w-50 m-auto">
+          <button class=" submit btn text-white">Subscribe</button>
+        </div>
+        
       </div>
     </section>
   </div>
