--- a/pages/home.html
+++ b/pages/home.html
@@ -30,13 +30,13 @@
 
   <div class="container">
     <div class="row">
-      <div class="col">
+      <div class="col ">
         <div class="intro">
           <p>Find the perfect dish for your ingredient</p>
           <p>The perfect meal is just a click a way</p>
         </div>
-        <div class="input-group w-50">
-          <input type="text" class="form-control" placeholder="Enter ingredient name" >
+        <div class="input-group w-50 ">
+          <input type="text" class="form-control" placeholder="Enter ingredient name" id="search">
           <button class="btn" type="button" id="button-addon2">
             <i class="fa-solid fa-magnifying-glass"></i>
           </button>
@@ -44,8 +44,7 @@
       </div>
     </div>
   </div>
-
-
+    <script src="/js/home.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
