--- a/pages/home.html
+++ b/pages/home.html
@@ -30,10 +30,10 @@
 
   <div class="container">
     <div class="row">
-      <div class="col ">
+      <div class="col get-meal">   
         <div class="intro">
-          <p>Find the perfect dish for your ingredient</p>
-          <p>The perfect meal is just a click a way</p>
+          <p><strong>Find the perfect dish for your ingredient</strong></p>
+          <p><em>The perfect meal is just a click a way</em></p>
         </div>
         <div class="input-group w-50 ">
           <input type="text" class="form-control" placeholder="Enter ingredient name" id="search">
@@ -44,6 +44,13 @@
       </div>
     </div>
   </div>
+
+  <div class="results">
+    
+  </div>
+
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="/js/home.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
