ft: add function to display search results on cards

--- a/pages/home.html
+++ b/pages/home.html
@@ -47,16 +47,8 @@
 
   
   <div class="container">
-    <div class="row gy-5">
-      <div class="col-lg-4 col-md-6 col-12 results">
-        <div class="card" style="width: 20rem;">
-          <img src="..." class="card-img-top" alt="food img">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <a href="#" class="btn">Open Recipe</a>
-          </div>
-        </div>
-      </div>
+    <div class="row gy-5 meal-results">
+      
     </div>
   </div>
   <div class="details">
