--- a/pages/help.html
+++ b/pages/help.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-
+<!-- 
   <section class="navbar  d-flex justify-content-between mb-4">
     <div>
       <h4>Dish-E</h4>
@@ -27,6 +27,24 @@
       <a href="#">Account</a>
       <a href="#">Log - out</a>
     </div>
+  </section> -->
+  <section>
+    <nav class="navbar sticky-top navbar-expand-lg navbar-light">
+      <div class="container-fluid">
+        <a class="navbar-brand mx-3" href="#home">Dish-E</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link mx-5"  href="home.html">Home</a>
+            <a class="nav-link mx-5" href="help.html">help</a>
+            <a class="nav-link mx-5" href="">account</a>
+            <a class="nav-link mx-5" href="">log-out</a>
+          </div>
+        </div>
+      </div>
+    </nav>
   </section>
 
   <div class=" d-flex flex-column box">
