ft: add feature to display not found message

--- a/pages/home.html
+++ b/pages/home.html
@@ -51,6 +51,11 @@
       
     </div>
   </div>
+
+  <div class="not-found">
+    <p>Sorry, we did not find any meal!<i class="fa-solid fa-heart-crack"></i></p>
+  </div>
+
   <div class="details">
     <button type="button" class="close-btn">
       <i class="fa-solid fa-xmark"></i>
