adding final touches

--- a/pages/profile.html
+++ b/pages/profile.html
@@ -15,15 +15,15 @@
 <body>
     <nav class="navbar sticky-top navbar-expand-lg navbar-light">
         <div class="container-fluid">
-          <a class="navbar-brand mx-3" href="#home">Dish-E</a>
+          <a class="navbar-brand mx-3" href="/pages/home.html">Dish-E</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link mx-5"  href="">Home</a>
-              <a class="nav-link mx-5" href="">help</a>
-              <a class="nav-link mx-5" href="">account</a>
+              <a class="nav-link mx-5"  href="/pages/home.html">Home</a>
+              <a class="nav-link mx-5" href="/pages/help.html">help</a>
+              <a class="nav-link mx-5" href="/pages/profile.html">account</a>
               <a class="nav-link mx-5" href="">log-out</a>
             </div>
           </div>
