--- a/pages/home.html
+++ b/pages/home.html
@@ -56,18 +56,20 @@
     <p>Sorry, we did not find any meal!<i class="fa-solid fa-heart-crack"></i></p>
   </div>
 
-  <div class="details">
-    <button type="button" class="close-btn">
-      <i class="fa-solid fa-xmark"></i>
-    </button>
-    <h2>Meal Name</h2>
-    <p>Category name</p>
-    <div class="instructions">
-      <h4>Instruction:</h4>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci rerum excepturi quam velit ipsa quasi voluptatum facere, impedit est, aspernatur incidunt porro ipsam ducimus asperiores, quibusdam error omnis. Numquam odit deserunt nulla dolorum vitae quis accusamus tempore maiores eligendi maxime!</p>
-    </div>
-    <div class="recipe-link">
-      <a href="" target="_blank">Watch Video</a>
+  <div class="instruction-details">
+    <div class="details">
+      <button type="button" class="close-btn">
+        <i class="fa-solid fa-xmark"></i>
+      </button>
+      <h2>Meal Name</h2>
+      <p>Category name</p>
+      <div class="instructions">
+        <h4>Instruction:</h4>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci rerum excepturi quam velit ipsa quasi voluptatum facere, impedit est, aspernatur incidunt porro ipsam ducimus asperiores, quibusdam error omnis. Numquam odit deserunt nulla dolorum vitae quis accusamus tempore maiores eligendi maxime!</p>
+      </div>
+      <div class="recipe-link">
+        <a href="" target="_blank">Watch Video</a>
+      </div>
     </div>
   </div>
 
