st : add nav links

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
                     <h3>Let's</h3>
                     <h2 >COOK</h2>
                     <p>Best recipes from all over the World</p>
-                    <button class="get btn-lg">Get Started</button>
+                    <a href="/pages/login.html" ><button class="get btn-lg">Get Started</button></a>
+
                 </div>
             </div>
 
