--- a/pages/help.html
+++ b/pages/help.html
@@ -16,18 +16,7 @@
 </head>
 
 <body>
-  <!-- 
-  <section class="navbar  d-flex justify-content-between mb-4">
-    <div>
-      <h4>Dish-E</h4>
-    </div>
-    <div class="w-50 d-flex justify-content-evenly">
-      <a href="#">Home</a>
-      <a href="#">Help</a>
-      <a href="#">Account</a>
-      <a href="#">Log - out</a>
-    </div>
-  </section> -->
+
   <section>
     <nav class="navbar sticky-top navbar-expand-lg navbar-light">
       <div class="container-fluid">
@@ -38,10 +27,10 @@
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link mx-5" href="home.html">Home</a>
-            <a class="nav-link mx-5" href="help.html">help</a>
-            <a class="nav-link mx-5" href="">account</a>
-            <a class="nav-link mx-5" href="">log-out</a>
+            <a class="nav-link mx-5" href="/pages/home.html">Home</a>
+            <a class="nav-link mx-5" href="/pages/help.html">help</a>
+            <a class="nav-link mx-5" href="/pages/profile.html">account</a>
+            <a class="nav-link mx-5" href="/index.html">log-out</a>
           </div>
         </div>
       </div>
