--- a/pages/profile.html
+++ b/pages/profile.html
@@ -24,7 +24,7 @@
               <a class="nav-link mx-5"  href="/pages/home.html">Home</a>
               <a class="nav-link mx-5" href="/pages/help.html">help</a>
               <a class="nav-link mx-5" href="/pages/profile.html">account</a>
-              <a class="nav-link mx-5" href="">log-out</a>
+              <a class="nav-link mx-5" href="/index.html">log-out</a>
             </div>
           </div>
         </div>
