--- a/pages/home.html
+++ b/pages/home.html
@@ -19,10 +19,10 @@
       </button>
       <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link mx-5"  href="">Home</a>
-          <a class="nav-link mx-5" href="">help</a>
-          <a class="nav-link mx-5" href="">account</a>
-          <a class="nav-link mx-5" href="">log-out</a>
+          <a class="nav-link mx-5"  href="/pages/home.html">Home</a>
+          <a class="nav-link mx-5" href="/pages/help.html">help</a>
+          <a class="nav-link mx-5" href="/pages/profile.html">account</a>
+          <a class="nav-link mx-5" href="/index.html">log-out</a>
         </div>
       </div>
     </div>
