st: add styling to details div

--- a/pages/home.html
+++ b/pages/home.html
@@ -57,7 +57,16 @@
   </div>
 
   <div class="details">
-    
+      <i class="fa-solid fa-xmark fs-1 "></i>
+    <h2 class="text-center">Meal Name</h2>
+    <p class="text-center">Category name</p>
+    <div class="instructions text-center">
+      <h4>Instruction:</h4>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci rerum excepturi quam velit ipsa quasi voluptatum facere, impedit est, aspernatur incidunt porro ipsam ducimus asperiores, quibusdam error omnis. Numquam odit deserunt nulla dolorum vitae quis accusamus tempore maiores eligendi maxime!</p>
+    </div>
+    <div class="recipe-link text-center">
+      <a href="" target="_blank">Watch Video</a>
+    </div>
   </div>
 
 
