adding learn more button

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
                     <h2 >COOK</h2>
                     <p>Best recipes from all over the World</p>
                     <a href="/pages/login.html" ><button class="get btn-lg">Get Started</button></a>
-
+                    <a href="#hiw" ><button class="get btn-lg">Learn more</button></a>
                 </div>
             </div>
 
        </div>
     </div>
-    <div class="hiw text-center">
+    <div class="hiw text-center" id="hiw">
         <h2><span>How i</span><span>t works</span></h2>
         <p>What do I cook?".</p>
             <p>The endless wondering of what to eat is a burden to us all. To be honest, we've all been there a lot of times. The few times we have the time and ingredients to cook, we end up cooking the same meals everyday.
