st: change caps

--- a/pages/home.html
+++ b/pages/home.html
@@ -20,9 +20,9 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-link mx-5"  href="/pages/home.html">Home</a>
-          <a class="nav-link mx-5" href="/pages/help.html">help</a>
-          <a class="nav-link mx-5" href="/pages/profile.html">account</a>
-          <a class="nav-link mx-5" href="/index.html">log-out</a>
+          <a class="nav-link mx-5" href="/pages/help.html">Help</a>
+          <a class="nav-link mx-5" href="/pages/profile.html">Account</a>
+          <a class="nav-link mx-5" href="/index.html">Log-out</a>
         </div>
       </div>
     </div>
