Profile info update

--- a/pages/profile.html
+++ b/pages/profile.html
@@ -38,10 +38,10 @@
             </p>
         </div>
         <div class="content col-md-6 p-4">
-          <p>Name:</p>
-          <p>UserName:</p>
-          <p>Email:</p>
-          <p>Phone Number:</p>
+          <p id="name"> Name: </p>
+          <p id="user">UserName: </p>
+          <p id="email">Email: </p>
+          <p id="phone"> Phone Number: </p>
         </div>
     </div>
       
