fix: Correct error

--- a/pages/help.html
+++ b/pages/help.html
@@ -88,7 +88,7 @@
         <form  id="submit">
           <div>
             <label for="nameValue"></label>
-            <input type="text" id="nameValue" placeholder="enter your name" required>
+            <input type="text" id="nameValue" placeholder="Enter your name" required>
           </div>
           <div>
             <label for="emailValue"></label>
