--- a/pages/profile.html
+++ b/pages/profile.html
@@ -31,12 +31,12 @@
           </div>
         </div>
     </nav>
-    <div class="container text-center row">
-        <div class="uploadimage text-center col-md-6 p-4">        
+    <div class="container  row ">
+        <div class="uploadimage text-center col-md-6 p-4 flex-column d-flex">        
           <img id="blah" src="http://placehold.it/180" alt="your image" />
           <input type='file' onchange="readURL(this);" />
         </div>
-        <div class="content col-md-6 p-4">
+        <div class="content col-md-6 p-4  display-6">
           <p id="name"> Name: </p>
           <p id="user">UserName: </p>
           <p id="email">Email: </p>
@@ -44,7 +44,7 @@
         </div>
     </div>
       
-    <script src="/js/profile.js"></script> -->
+    <script src="/js/profile.js"></script>
     <!-- JavaScript Bundle with Popper -->
     <script
   src="https://code.jquery.com/jquery-3.6.0.min.js"
