--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <h3>Let's</h3>
                     <h2 >COOK</h2>
                     <p>Best recipes from all over the World</p>
-                    <a href="/pages/login.html" ><button class="get btn-lg">Get Started</button></a>
+                    <a href="pages/login.html" ><button class="get btn-lg">Get Started</button></a>
                     <a href="#hiw" ><button class="get btn-lg">Learn more</button></a>
                 </div>
             </div>
