--- a/pages/profile.html
+++ b/pages/profile.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Livvic:wght@700&family=Lobster&family=Merriweather:wght@800&display=swap" rel="stylesheet">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/profile.css">
+    <link rel="stylesheet" href="css/profile.css">
     <!-- <script src="/js/profile.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script> -->
     <title>Document</title>
@@ -17,16 +17,16 @@
 <body>
     <nav class="navbar sticky-top navbar-expand-lg navbar-light">
         <div class="container-fluid">
-          <a class="navbar-brand mx-3" href="/pages/home.html">Dish-E</a>
+          <a class="navbar-brand mx-3" href="pages/home.html">Dish-E</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link mx-5"  href="/pages/home.html">Home</a>
-              <a class="nav-link mx-5" href="/pages/help.html">Help</a>
-              <a class="nav-link mx-5" href="/pages/profile.html">Account</a>
-              <a class="nav-link mx-5" href="/index.html">Log-Out</a>
+              <a class="nav-link mx-5"  href="pages/home.html">Home</a>
+              <a class="nav-link mx-5" href="pages/help.html">Help</a>
+              <a class="nav-link mx-5" href="pages/profile.html">Account</a>
+              <a class="nav-link mx-5" href="index.html">Log-Out</a>
             </div>
           </div>
         </div>
@@ -44,7 +44,7 @@
         </div>
     </div>
       
-    <script src="/js/profile.js"></script>
+    <script src="js/profile.js"></script>
     <!-- JavaScript Bundle with Popper -->
     <script
   src="https://code.jquery.com/jquery-3.6.0.min.js"
