--- a/pages/home.html
+++ b/pages/home.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/7c6aee25da.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Merriweather&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/home.css">
+    <link rel="stylesheet" href="css/home.css">
     <title>home</title>
 </head>
 <body>
@@ -19,10 +19,10 @@
       </button>
       <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link mx-5"  href="/pages/home.html">Home</a>
-          <a class="nav-link mx-5" href="/pages/help.html">Help</a>
-          <a class="nav-link mx-5" href="/pages/profile.html">Account</a>
-          <a class="nav-link mx-5" href="/index.html">Log-out</a>
+          <a class="nav-link mx-5"  href="pages/home.html">Home</a>
+          <a class="nav-link mx-5" href="pages/help.html">Help</a>
+          <a class="nav-link mx-5" href="pages/profile.html">Account</a>
+          <a class="nav-link mx-5" href="index.html">Log-out</a>
         </div>
       </div>
     </div>
@@ -60,7 +60,7 @@
   </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <script src="/js/home.js"></script>
+    <script src="js/home.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
