update files link

--- a/pages/help.html
+++ b/pages/help.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Merriweather">
 
 
-  <link rel="stylesheet" href="../css/help.css">
+  <link rel="stylesheet" href="css/help.css">
   <title>Dish-E Help</title>
 </head>
 
@@ -28,10 +28,10 @@
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link mx-5" href="/pages/home.html">Home</a>
-            <a class="nav-link mx-5" href="/pages/help.html">Help</a>
-            <a class="nav-link mx-5" href="/pages/profile.html">Account</a>
-            <a class="nav-link mx-5" href="/index.html">Log-out</a>
+            <a class="nav-link mx-5" href="pages/home.html">Home</a>
+            <a class="nav-link mx-5" href="pages/help.html">Help</a>
+            <a class="nav-link mx-5" href="pages/profile.html">Account</a>
+            <a class="nav-link mx-5" href="index.html">Log-out</a>
           </div>
         </div>
       </div>
@@ -102,7 +102,7 @@
     </section>
   </div>
 
-<script  src="../js/help.js"></script>
+<script  src="js/help.js"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 </body>
 
