--- a/pages/profile.html
+++ b/pages/profile.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/profile.css">
     <!-- <script src="/js/profile.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script> -->
-    <title>Document</title>
+    <title>account</title>
 </head>
 <body>
     <nav class="navbar sticky-top navbar-expand-lg navbar-light">
